@@ -10,6 +10,7 @@ For details of when a commit makes it into the stable branch see the ReleaseNote
 
 2016-11-07 b3rs3rk
 	Fix: Issue with SphinxSE 2.2.11 and maximum return size in ReleaseRemover with larger DB
+	Chg: Improve site/admin site performance in a few queries in Releases and Groups
 2016-11-05 b3rs3rk
 	Fix: nZEDb.xml file with new DB patch number
 2016-11-04 DariusIII
